--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-title" content="Quiz Player">
     <link rel="apple-touch-icon" href="./icons/icon-192x192.png">
     
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./tailwind.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         /* 基本スタイルの設定 */
